--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.mail.properties.mail.smtp.writetimeout=10000
 
 
 rating.expire.days = 10
+
+spring.data.mongodb.uri= mongodb://localhost:27017/travelmanagement
