--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
 	implementation('io.springfox:springfox-swagger2:2.6.1')
 	implementation('io.springfox:springfox-swagger-ui:2.6.1')
 	compileOnly 'org.projectlombok:lombok'
+	implementation 'com.opencsv:opencsv:4.0'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
